@@ -5,9 +5,11 @@
 
 # change 'tests => 1' to 'tests => last_test_to_print';
 
-use Test::More;
+use Test::More tests => 7;
 BEGIN {
   use_ok('Gscan2pdf::Ocropus');
+  use Gscan2pdf::Tesseract;
+  use Encode;
 };
 
 #########################
@@ -23,13 +25,27 @@ use Locale::gettext 1.05;    # For translations
 our $d = Locale::gettext->domain($prog_name);
 
 SKIP: {
- skip 'Ocropus not installed', 1 unless Gscan2pdf::Ocropus->setup;
+ skip 'Ocropus not installed', 6 unless Gscan2pdf::Ocropus->setup;
 
  # Create test image
  system('convert +matte -depth 1 -pointsize 12 -density 300 label:"The quick brown fox" test.png');
 
  my $got = Gscan2pdf::Ocropus->hocr('test.png', 'eng');
  like( $got, qr/The quick brown fox/, 'Ocropus returned sensible text' );
+
+ skip 'Tesseract not installed', 5 unless Gscan2pdf::Tesseract->setup;
+ my $languages = Gscan2pdf::Tesseract->languages;
+ skip 'German language pack for Tesseract not installed', 5 unless (defined $languages->{'deu'});
+
+ # Create test image
+ system("convert +matte -depth 1 -pointsize 12 -density 300 label:'öÖäÄüÜß' test.png");
+
+ my $got = Gscan2pdf::Ocropus->hocr('test.png', 'deu');
+ is( Encode::is_utf8($got, 1), 1, "Ocropus returned UTF8" );
+ for my $c ( qw( ö ä ü ß ) ) {
+   my $c2 = decode_utf8( $c );
+   like( $got, qr/$c2/, "Ocropus returned $c" );
+ }
 
  unlink 'test.png';
 }
