@@ -3,6 +3,7 @@ gscan2pdf (1.0.1) unstable; urgency=low
   * New upstream release
     Closes: #653918 (gscan2pdf doesn't save metadata anymore)
     Closes: #646298 (pdf-exports of ocropus texts are slow, big)
+    Closes: #646246 (gscan2pdf ignores html-entities returned by ocropus documents)
 
  --
 
