@@ -6,6 +6,9 @@
 * Embed font in PDF only once
   Closes Debian bug #646298
   Thanks to noreply@example.com for the patch
+* Decode HTML entities returned by Ocropus
+  Closes Debian bug #646246
+  Thanks to noreply@example.com for the patch
 
 
 1.0.0 (16.09.2011):
